<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/app_bar_main">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:navigationBarColor="@color/navigationBarColor"
        tools:context=".MainActivity"
        tools:layout_editor_absoluteY="611dp">

        <RelativeLayout
            android:id="@+id/mainContentLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/mainLinerLayout1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackground"
                android:onClick="socket2Power"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/cappucino_icon"
                    android:contentDescription="@string/cappucino"
                    android:layout_width="156dp"
                    android:layout_height="156dp"
                    android:backgroundTint="#00FFFFFF"
                    android:scaleType="fitXY"
                    android:scaleX="1"


                    android:scaleY="1"
                    app:srcCompat="@drawable/cappuccino" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="52dp"
                        android:text="@string/cappucino"
                        android:textColor="@color/nameCoffee"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="148dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="8dp"
                        android:text="@string/cappucino_info"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView6" />

                    <ImageView
                        android:id="@+id/arrow"
                        android:contentDescription="@string/arrow"
                        android:layout_width="18dp"
                        android:layout_height="28dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/icn_arrow" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

            <View
                android:id="@+id/view"
                android:layout_above="@+id/mainLinerLayout2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:id="@+id/mainLinerLayout2"
                android:layout_below="@id/mainLinerLayout1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackground"
                android:onClick="socket3Power"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/espresso_icon"
                    android:contentDescription="@string/espresso"
                    android:layout_width="156dp"
                    android:layout_height="156dp"
                    android:scaleType="fitXY"
                    android:scaleX="1.2"
                    android:scaleY="1.2"
                    app:srcCompat="@drawable/espresso" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="52dp"
                        android:text="@string/espresso"
                        android:textColor="@color/nameCoffee"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="148dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="8dp"
                        android:text="@string/espresso_info"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView10" />

                    <ImageView
                        android:id="@+id/arrow2"
                        android:contentDescription="@string/arrow"
                        android:layout_width="18dp"
                        android:layout_height="28dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/icn_arrow" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>

            <View
                android:id="@+id/view2"
                android:layout_above="@+id/mainLinerLayout3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:id="@+id/mainLinerLayout3"
                android:layout_below="@id/mainLinerLayout2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackground"
                android:onClick="socket4Power"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/espressox2_icon"
                    android:contentDescription="@string/espresso2x"
                    android:layout_width="156dp"
                    android:layout_height="156dp"
                    android:scaleType="fitXY"
                    android:scaleX="1"
                    android:scaleY="1"
                    app:srcCompat="@drawable/espresso2x" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="52dp"
                        android:text="@string/espresso2x"
                        android:textColor="@color/nameCoffee"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="148dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="8dp"
                        android:text="@string/espresso2x_info"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView12" />

                    <ImageView
                        android:id="@+id/arrow3"
                        android:contentDescription="@string/arrow"
                        android:layout_width="18dp"
                        android:layout_height="28dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/icn_arrow" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>

            <View
                android:id="@+id/view3"
                android:layout_above="@+id/mainLinerLayout4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:id="@+id/mainLinerLayout4"
                android:layout_below="@id/mainLinerLayout3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackground"
                android:onClick="socket5Power"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/americano_icon"
                    android:contentDescription="@string/americano"
                    android:layout_width="156dp"
                    android:layout_height="156dp"
                    android:scaleType="fitXY"
                    android:scaleX="0.9"
                    android:scaleY="0.9"
                    app:srcCompat="@drawable/americano" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="52dp"
                        android:text="@string/americano"
                        android:textColor="@color/nameCoffee"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView15"
                        android:layout_width="148dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="8dp"
                        android:text="@string/americano_info"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView14" />

                    <ImageView
                        android:id="@+id/arrow4"
                        android:contentDescription="@string/arrow"
                        android:layout_width="18dp"
                        android:layout_height="28dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/icn_arrow" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>

            <View
                android:id="@+id/view4"
                android:layout_above="@+id/mainLinerLayout5"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:id="@+id/mainLinerLayout5"
                android:layout_below="@id/mainLinerLayout4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackground"
                android:onClick="socket6Power"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/americanox2_icon"
                    android:contentDescription="@string/americano2x"
                    android:layout_width="156dp"
                    android:layout_height="156dp"
                    android:scaleType="fitXY"
                    android:scaleX="0.8"
                    android:scaleY="0.8"
                    app:srcCompat="@drawable/americano2x" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="52dp"
                        android:text="@string/americano2x"
                        android:textColor="@color/nameCoffee"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView17"
                        android:layout_width="156dp"
                        android:layout_height="53dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginBottom="32dp"
                        android:text="@string/americano2x_info"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView16" />

                    <ImageView
                        android:id="@+id/arrow5"
                        android:contentDescription="@string/arrow"
                        android:layout_width="18dp"
                        android:layout_height="28dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/icn_arrow" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>